--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.24.7",
     "babel-loader": "^8.2.3",
+    "html-webpack-plugin": "^5.6.0",
     "react-hot-loader": "^4.13.1",
     "webpack": "^5.68.0",
     "webpack-cli": "^4.9.2",
