--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack serve --config ./webpack.config.js --mode development",
-    "build": "webpack --config ./webpack.config.js --mode production",
-    "test": "echo \"No test specified\" && exit 0"
+    "start": "webpack serve --config ./webpack.dev.js",
+    "build": "webpack --config ./webpack.prod.js",
+     "test": "echo \"No test specified\" && exit 0"
   },
   "keywords": [],
   "author": "",
