--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack serve --config build-utils/webpack.config.js --env env=dev",
+    "start": "webpack serve --config build-utils/webpack.config.js --env env=prod",
     "build": "webpack --config build-utils/webpack.config.js --env env=prod",
     "test": "echo \"No test specified\" && exit 0"
   },
